# OpenGLLibrary

./: .gitignore  CMakeLists.txt  TEST.c
.zed/: tasks.json
EASUI/: EASUI.c  EASUI.h
EASUI/COMMON/: INPUT.h
EASUI/DEPENDENCIES/GLAD/include/glad/: glad.h
EASUI/DEPENDENCIES/glad/src/: glad.c
EASUI/ELEMENTS/: LABEL.c  SCREEN.c  WINDOW.c  WINDOWS.c
EASUI/MEMORY_ARENA/: MEMORY_ARENA.h
EASUI/SOURCE/: EASUI.c
EASUI/SOURCE/ELEMENTS/: FRAME.c  LABEL.c  SCREEN.c  WINDOW.c
EASUI/SOURCE/INPUT/: INPUT.c
EASUI/SOURCE/MEMORY_ARENA/: MEMORY_ARENA.c
EASUI/SOURCE/RENDERER/: RENDERER.c
EASUI/SOURCE/WINDOW_MANAGER/: WINDOW_MANAGER.c
OpenGLLibrary/: OpenGLLibrary.cpp  OpenGLLibrary.h
examples/test1/: TEST.c
